--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
-  "name": "monitoramento-comportamento",
+  "name": "discord-bot-cron",
   "version": "1.0.0",
-  "description": "Bot do Discord com servidor web para UptimeRobot",
+  "description": "Bot Discord com envio de mensagem agendado e ping de uptime",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "build": "echo 'Nada para compilar'"
+  },
+  "engines": {
+    "node": "18.x"
   },
   "dependencies": {
-    "discord.js": "^14.11.0",
-    "node-cron": "^3.0.2",
-    "express": "^4.18.2"
+    "discord.js": "^14.15.3",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "node-cron": "^3.0.3"
   }
 }
